--- a/src/components/App/css/index.css
+++ b/src/components/App/css/index.css
@@ -54,6 +54,9 @@ h2 {
   @media (max-width: 1024px) {
     font-size: calc(var(--font-size-base) * 2.5);
   }
+  @media (max-width: 576px) {
+    font-size: calc(var(--font-size-base) * 2);
+  }
 }
 
 h3 {
@@ -142,24 +145,27 @@ section {
 ul {
   &.hovered {
     & li {
-      position: relative;
-      &::after {
-        opacity: 0;
-        content: "";
-        width: 100%;
-        height: 5px;
-        top: 35px;
-        left: 0;
-        position: absolute;
-        background: rgb(54,193,172);
-        background: linear-gradient(135deg, rgba(54,193,172,0) 20%, rgba(54,193,172,1) 20%, rgba(54,193,172,1) 80%, rgba(54,193,172,0) 80%, rgba(54,193,172,0) 100%);
-        transition: opacity 0.5s;
-      }
-      &:hover {
+      & a, & span {
+        position: relative;
         &::after {
-          opacity: 1;
+          opacity: 0;
+          content: "";
+          width: 100%;
+          height: 5px;
+          bottom: 0;
+          left: 0;
+          position: absolute;
+          background: rgb(54,193,172);
+          background: linear-gradient(135deg, rgba(54,193,172,0) 5%, rgba(54,193,172,1) 5%, rgba(54,193,172,1) 95%, rgba(54,193,172,0) 95%, rgba(54,193,172,0) 100%);
+          transition: opacity 0.5s;
+        }
+        &:hover {
+          &::after {
+            opacity: 1;
+          }
         }
       }
+      
     }
   }
 }
