--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,8 +1,22 @@
 header {
   & .logo {
+    width: 100%;
     padding: calc(var(--spacer) * 3) 0;
+    @media (max-width: 1024px) {
+      padding: calc(var(--spacer) * 2.5) 0;
+    }
     @media (max-width: 768px) {
       padding: calc(var(--spacer) * 1.5) 0;
+    }
+    & .logo-svg {
+      transition: width 0.5s;
+      width: 120px;
+      @media (max-width: 1024px) {
+        width: 130px;
+      }
+      @media (max-width: 768px) {
+        width: 130px;
+      }
     }
     &.open {
       display: block;
@@ -13,6 +27,12 @@ header {
       @media (max-width: 768px) {
         left: calc(var(--spacer) * 2);
       }
+      @media (max-width: 576px) {
+        left: calc(var(--spacer) * 1.2);
+      }
+      & .logo-svg {
+        width: 170px;
+      }
     }
   }
 
@@ -20,23 +40,39 @@ header {
     & ul {
       display: flex;
       justify-content: space-between;
+      @media (max-width: 768px) {
+        height: 0;
+        visibility: hidden;
+        opacity: 0; 
+        transition: opacity 0.5s;
+      }
       & li {
         position: relative;
         top: 0;
+        transition: top 0.5s;
         padding: calc(var(--spacer) * 3.5) 0;
-        @media (max-width: 768px) {
-          padding: calc(var(--spacer) * 1.5) 0;
-        }
         & .count { display: none; }
         & a {
           font-size: var(--font-size-lg);
           font-weight: var(--font-weight-light);
+          @media (max-width: 1024px) {
+            font-size: calc(var(--font-size-base) * 1.2);
+          }
         }
-      }
-      @media (max-width: 768px) {
-        height: 0;
-        visibility: hidden;
-        opacity: 0;  
+        &.home {
+          display: none;
+          @media (max-width: 768px) {
+            display: block;
+          }
+        }
+        &.github-link {
+          @media (max-width: 1024px) {
+            top: calc(var(--spacer) * -0.3)
+          }
+        }
+        @media (max-width: 768px) {
+          padding: calc(var(--spacer) * 1.5) 0;
+        }
       }
       &.menu-mobile {
         width: calc(100% - 4rem);
@@ -59,6 +95,9 @@ header {
           font-size: calc(var(--font-size-base) * 2);
           & a {
             color: var(--body-color);
+            &:hover {
+              text-decoration: none;
+            }
           }
           & .count { 
             display: inline;
