--- a/templates/account/email_change_confirm.html
+++ b/templates/account/email_change_confirm.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
-{% load i18n %}{% load staticfiles %}
+{% load i18n %}
+{% load staticfiles %}
 {% block head_title %}{% trans "Email chnage" context "Email change page title" %}{% endblock %}
 
 
@@ -9,8 +10,8 @@
         <img class="lazyload lazypreload"
         data-src="{% static 'images/login-bg.png' %}"
              data-srcset="{% static 'images/login-bg.png' %} 1x, {% static 'images/login-bg2x.png' %} 2x">
-      <h2>{% blocktrans trimmed context "Email change done text" %}
-          Your email address was changed successfully.
+      <h2>{% blocktrans trimmed context "Email change message text" %}
+          {{ message }}
       {% endblocktrans %}</h2>
   </div>
 {% endblock %}
