--- a/src/components/Feature/feature.css
+++ b/src/components/Feature/feature.css
@@ -101,5 +101,13 @@
             padding: var(--spacer);
           }
         }
+        &.documentation {
+          border-top: solid var(--border-width) var(--primaryColor);
+          padding: calc(var(--spacer) * 4) calc(var(--spacer) * 10);
+          & .description {
+            font-weight: var(--font-weight-lighter);
+            margin-bottom: calc(var(--spacer) * 3);
+          }
+        }
     }
 }
