--- a/src/components/Feature/feature.css
+++ b/src/components/Feature/feature.css
@@ -104,6 +104,7 @@
         &.documentation {
           border-top: solid var(--border-width) var(--primaryColor);
           padding: calc(var(--spacer) * 4) calc(var(--spacer) * 10);
+          margin-bottom: calc(var(--spacer) * 3);
           & .description {
             font-weight: var(--font-weight-lighter);
             margin-bottom: calc(var(--spacer) * 3);
