--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -716,18 +716,20 @@
           padding: calc(var(--spacer) * 2) 0;
         }
         & ul {
-          list-style-image: url('../../images/done-icon.png');
-          list-style-position: outside;
           margin-left: calc(var(--spacer) * 3);
           & li {
             font-size: calc(var(--font-size-base) * 1.2);
-            & span {
-              position: relative;
-              top: calc(var(--spacer) * -1);
-              left: calc(var(--spacer) * 0.5);
-              @media (max-width: 1024px) {
-                top: calc(var(--spacer) * -1);
-              }
+            padding-bottom: var(--spacer);
+            position: relative;
+            &::before {
+              content: "";
+              position: absolute;
+              display: inline-block;
+              height: 30px;
+              width: 30px;
+              background-image: url('../../images/done-icon.png');
+              background-size: contain;
+              left: calc(var(--spacer) * -3);
             }
           }
         }
